# chat-goggles

./: Readme  hello_auth.py  hello_discord.py  hello_numpy.py  pyproject.toml
.devcontainer/: devcontainer.json
dataset/: dataset.py
hello/: 1-hello.py  2-hello.py
llm/: falcon_180b_v2.py  falcon_40b.py  falcon_40b_gpu.py  falcon_7b.py  falcon_7b_ggml.py  gpt2.py  marcoroni-70b.py  robin.py  wizardlm.py  xwin_lm.py  xwin_lm_70b.py
modal_bot/: Readme  bot_apps.py  flask_hello.py  manage_commands.py  modal_bot.py  notes  register_command.py
run-model/: vol.py  vol_combine.py
run_model/: Readme  cli.py  code_sandbox.py  dataset.py  ftypes.py  invoke.py  vol.py
scratch/: falcon_7b.py  file-tests.py  lib.py  vol.py
tests/: 2-hello.py  3-stories.py  4-stories.py
