[tool.poetry]
name = "chat-goggles"
version = "0.1.0"
description = ""
authors = ["YeahWick <133565833+YeahWick@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "chat_goggles"}]

[tool.poetry.dependencies]
python = "^3.10"
modal = "^0.55"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
